change to M-PageDown

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -12,7 +12,7 @@ That function generates a random sentence.
 
 ## Step 2: Suggest a completion from a random sentence when triggered.
 
-I want that when I am in a buffer and in INSERT mode, if I issue the key sequence `<C-c>`,
+I want that when I am in a buffer and in INSERT mode, if I issue the key sequence `<M-PageDown>`,
 then the plugin should suggest to complete the current word with a random sentence picked from the list of sentences. The suggestion text must appear in grey.
 
 Tell me what code to put in what file in order to achieve that.
