fix not allowed

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -7,13 +7,21 @@ We are to make it step by step.
 ## Step 1: Generate a random sentence
 
 in `./lua/rktmb-deepseek-complete.lua`, there is a function called `generate_sentence()`.
-
 That function generates a random sentence.
 
 ## Step 2: Suggest a completion from a random sentence when triggered.
 
-I want that when I am in a buffer and in INSERT mode, if I issue the key sequence `<M-PageDown>`,
+When I am in a buffer and in INSERT mode, if I issue the key sequence `<M-PageDown>`,
 then the plugin should suggest to complete the current word with a random sentence picked from the list of sentences. The suggestion text must appear in grey.
 
-Tell me what code to put in what file in order to achieve that.
+The problem is that I get the following error when I issue the key sequence `<M-PageDown>` in insert mode:
 
+```
+E5108: Error executing lua: Vim:E565: Not allowed to change text or change window
+stack traceback:
+        [C]: in function 'complete'
+        ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:14: 
+in function <....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:7>
+```
+
+Analyze the code and tell me what should I do to fix the problem.
