--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -12,16 +12,11 @@ That function generates a random sentence.
 ## Step 2: Suggest a completion from a random sentence when triggered.
 
 When I am in a buffer and in INSERT mode, if I issue the key sequence `<M-PageDown>`,
-then the plugin should suggest to complete the current word with a random sentence picked from the list of sentences. The suggestion text must appear in grey.
+then the plugin should suggest to complete the current word with a random sentence 
+picked from the list of sentences. The suggestion text should appear in grey.
 
-The problem is that I get the following error when I issue the key sequence `<M-PageDown>` in insert mode:
+The problem is when I issue the key sequence `<M-PageDown>` in insert mode, nothing is suggested.
 
-```
-E5108: Error executing lua: Vim:E565: Not allowed to change text or change window
-stack traceback:
-        [C]: in function 'complete'
-        ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:14: 
-in function <....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:7>
-```
+When I look in `/tmp/rktmb-deepseek-complete.log`, I see `Entered generate_sentence()`, so the plugin is actually trigerring the random sentence generation.
 
 Analyze the code and tell me what should I do to fix the problem.
