complete just after entering

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -15,8 +15,8 @@ When I am in a buffer and in INSERT mode, if I issue the key sequence `<M-PageDo
 then the plugin should suggest to complete the current word with a random sentence 
 picked from the list of sentences. The suggestion text should appear in grey.
 
-The problem is when I issue the key sequence `<M-PageDown>` in insert mode, nothing is suggested.
+The problem is when I issue the key sequence `<M-PageDown>` just after entering INSERT mode, nothing is suggested.
 
-When I look in `/tmp/rktmb-deepseek-complete.log`, I see `Entered generate_sentence()`, so the plugin is actually trigerring the random sentence generation.
+I have to write one first, then press `<M-PageDown>` to see the suggestion.
 
-Analyze the code and tell me what should I do to fix the problem.
+Analyze the code and tell me what should I do to get the suggestion just after entering INSERT mode.
