use real suggestion

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,6 +1,6 @@
 # Propose completion from the random sentence generator
 
-The final goal of this project is to be a code completion plugin that uses the DeepSeek API to suggest completions.
+The final goal of this project is to be an inline suggestion plugin that uses the DeepSeek API to suggest.
 But we are not going to implement all in one go.
 We are to make it step by step.
 
@@ -9,14 +9,16 @@ We are to make it step by step.
 in `./lua/rktmb-deepseek-complete.lua`, there is a function called `generate_sentence()`.
 That function generates a random sentence.
 
-## Step 2: Suggest a completion from a random sentence when triggered.
+## Step 2: Make an inline  suggestion from a random sentence when triggered.
 
 When I am in a buffer and in INSERT mode, if I issue the key sequence `<M-PageDown>`,
 then the plugin should suggest to complete the current word with a random sentence 
 picked from the list of sentences. The suggestion text should appear in grey.
 
-The problem is when I issue the key sequence `<M-PageDown>` just after entering INSERT mode, nothing is suggested.
+The problem is when I issue the key sequence `<M-PageDown>`, the completion actually written in the buffer and doesn't behave as an inline suggestion.
 
-I have to write one first, then press `<M-PageDown>` to see the suggestion.
+I want it to be an inline suggestion, not a typed text.
 
-Analyze the code and tell me what should I do to get the suggestion just after entering INSERT mode.
+Analyze the code and tell me what should I do to make it an inline suggestion.
+
+
