--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -15,10 +15,10 @@ When I am in a buffer and in INSERT mode, if I issue the key sequence `<M-PageDo
 then the plugin should suggest to complete the current word with a random sentence 
 picked from the list of sentences. The suggestion text should appear in grey.
 
-The problem is when I issue the key sequence `<M-PageDown>`, the completion actually written in the buffer and doesn't behave as an inline suggestion.
+The problem is when I issue the key sequence `<M-PageDown>`, the suggestion is the same color as the text I cannot distinguish it from the text.
 
-I want it to be an inline suggestion, not a typed text.
+I want the inline suggestion to be grey color. 
 
-Analyze the code and tell me what should I do to make it an inline suggestion.
+Analyze the code and tell me what should I do to make the inline suggestion grey.
 
 
