clear if typing

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -11,14 +11,16 @@ That function generates a random sentence.
 
 ## Step 2: Make an inline  suggestion from a random sentence when triggered.
 
-When I am in a buffer and in INSERT mode, if I issue the key sequence `<M-PageDown>`,
-then the plugin should suggest to complete the current word with a random sentence 
-picked from the list of sentences. The suggestion text should appear in grey.
+When I am in a buffer and in INSERT mode and issue the key sequence `<M-PageDown>`,
+the plugin suggests with a random sentence picked from the list of sentences. 
+The suggestion text appears in grey.
 
-The problem is when I issue the key sequence `<M-PageDown>`, the suggestion is the same color as the text I cannot distinguish it from the text.
+If I leave the INSERT mode, the suggestion is removed.
 
-I want the inline suggestion to be grey color. 
+That is good.
 
-Analyze the code and tell me what should I do to make the inline suggestion grey.
+I want that after the suggestion is displayed, if I continue to type, the suggestion disappears the same way as it does when I leave the INSERT mode.
+
+Analyze the code and tell me what should I do to make the inline suggestion disappear if I continue to type over it.
 
 
