clear multiple times

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -17,10 +17,12 @@ The suggestion text appears in grey.
 
 If I leave the INSERT mode, the suggestion is removed.
 
+After the suggestion is displayed, if I continue to type, the suggestion disappears the same way as it does when I leave the INSERT mode.
+
 That is good.
 
-I want that after the suggestion is displayed, if I continue to type, the suggestion disappears the same way as it does when I leave the INSERT mode.
+But if I re-continue to type then re-trigger the completion, the suggestion is not removed anymore. The "erase-if-I-type" only works once.
 
-Analyze the code and tell me what should I do to make the inline suggestion disappear if I continue to type over it.
+Analyze the code and tell me what should I do to make the inline suggestion disappear if I continue to type over it any number of times.
 
 
