--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -15,14 +15,9 @@ When I am in a buffer and in INSERT mode and issue the key sequence `<M-PageDown
 the plugin suggests with a random sentence picked from the list of sentences. 
 The suggestion text appears in grey.
 
-If I leave the INSERT mode, the suggestion is removed.
+If the sentence contains a newline, the suggestion is not split into multiple lines.
+IT just displays the entire sentence in one line and a `^@` in the place of the newline character.
 
-After the suggestion is displayed, if I continue to type, the suggestion disappears the same way as it does when I leave the INSERT mode.
-
-That is good.
-
-But if I re-continue to type then re-trigger the completion, the suggestion is not removed anymore. The "erase-if-I-type" only works once.
-
-Analyze the code and tell me what should I do to make the inline suggestion disappear if I continue to type over it any number of times.
+Analyze the code and tell me what should I do to make the inline suggestion to display the sentence on multiple lines.
 
 
