ajust for multi line

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,13 +1,18 @@
-# Propose completion from the random sentence generator
+# Propose inline suggestions from the random sentence generator
 
 The final goal of this project is to be an inline suggestion plugin that uses the DeepSeek API to suggest.
 But we are not going to implement all in one go.
 We are to make it step by step.
 
+- Generate a random sentences
+- Make an inline suggestion from a random sentence when triggered.
+- Query the DeepSeek API to get suggestions from the content of the buffer.
+- Use the DeepSeek API response to suggest completions (dont use the random sentences anymore)
+
 ## Step 1: Generate a random sentence
 
 in `./lua/rktmb-deepseek-complete.lua`, there is a function called `generate_sentence()`.
-That function generates a random sentence.
+That function generates a multiline random sentence.
 
 ## Step 2: Make an inline  suggestion from a random sentence when triggered.
 
@@ -15,9 +20,21 @@ When I am in a buffer and in INSERT mode and issue the key sequence `<M-PageDown
 the plugin suggests with a random sentence picked from the list of sentences. 
 The suggestion text appears in grey.
 
-If the sentence contains a newline, the suggestion is not split into multiple lines.
-IT just displays the entire sentence in one line and a `^@` in the place of the newline character.
+If the sentence contains a newline, the suggestion is splat into multiple lines.
 
-Analyze the code and tell me what should I do to make the inline suggestion to display the sentence on multiple lines.
+That is good.
 
+But that occurs only if I start the trigger with the cursor on the first column.
 
+If I put the cursor at the end of a word or line then trigger the completion, I get the following error:
+
+```
+Error executing vim.schedule lua callback: ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:41: Invalid 'col': out of range
+stack traceback:
+        [C]: in function 'nvim_buf_set_extmark'
+        ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:41: in function ''
+        vim/_editor.lua: in function ''
+        vim/_editor.lua: in function <vim/_editor.lua:0>
+```
+
+Analyze the code and tell me what should I do to make the inline suggestion to display wherever the cursor is.
