--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -24,9 +24,8 @@ If the sentence contains a newline, the suggestion is splat into multiple lines.
 
 That is good.
 
-But that occurs only if I start the trigger with the cursor on the first column.
 
-If I put the cursor at the end of a word or line then trigger the completion, I get the following error:
+But sometimes, If I put the cursor on any word or line then trigger the completion, I get the following error:
 
 ```
 Error executing vim.schedule lua callback: ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:41: Invalid 'col': out of range
@@ -37,4 +36,4 @@ stack traceback:
         vim/_editor.lua: in function <vim/_editor.lua:0>
 ```
 
-Analyze the code and tell me what should I do to make the inline suggestion to display wherever the cursor is.
+Analyze the code and find all causes possible to get the error above and propose me a fix.
