--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,10 +1,9 @@
 # Propose inline suggestions from the random sentence generator
 
 The final goal of this project is to be an inline suggestion plugin that uses the DeepSeek API to suggest.
-But we are not going to implement all in one go.
-We are to make it step by step.
+But we are not going to implement all in one go, we are to make it step by step.
 
-- Generate a random sentences
+- Generate random sentences
 - Make an inline suggestion from a random sentence when triggered.
 - Query the DeepSeek API to get suggestions from the content of the buffer.
 - Use the DeepSeek API response to suggest completions (dont use the random sentences anymore)
@@ -13,27 +12,20 @@ We are to make it step by step.
 
 in `./lua/rktmb-deepseek-complete.lua`, there is a function called `generate_sentence()`.
 That function generates a multiline random sentence.
+This is done.
 
 ## Step 2: Make an inline  suggestion from a random sentence when triggered.
 
 When I am in a buffer and in INSERT mode and issue the key sequence `<M-PageDown>`,
-the plugin suggests with a random sentence picked from the list of sentences. 
-The suggestion text appears in grey.
+I want the plugin to place de cursor at the end of the line and then suggest with a random sentence (which is multi line) picked from the list of sentences.
 
-If the sentence contains a newline, the suggestion is splat into multiple lines.
+It is important to place the cursor at the end of the line before suggesting because suggestion is based on an existing text.
 
-That is good.
+The suggestion text must appears in grey (#808080).
 
+The suggestion text must push down the lines below it and not overlap with the text below.
 
-But sometimes, If I put the cursor on any word or line then trigger the completion, I get the following error:
+If I continue to type after the suggestion is displayed, the suggestion must disappear.
+As far as I type, I can trigger the suggestion again and if I continue to type, the suggestion must disappear, again and again.
 
-```
-Error executing vim.schedule lua callback: ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:41: Invalid 'col': out of range
-stack traceback:
-        [C]: in function 'nvim_buf_set_extmark'
-        ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:41: in function ''
-        vim/_editor.lua: in function ''
-        vim/_editor.lua: in function <vim/_editor.lua:0>
-```
-
-Analyze the code and find all causes possible to get the error above and propose me a fix.
+Take the existing code and continue it in order to get what I want. 
