fix cursor position

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -28,4 +28,10 @@ The suggestion text must push down the lines below it and not overlap with the t
 If I continue to type after the suggestion is displayed, the suggestion must disappear.
 As far as I type, I can trigger the suggestion again and if I continue to type, the suggestion must disappear, again and again.
 
-Take the existing code and continue it in order to get what I want. 
+With the existing code:
+- I see "Generated suggestion: ..." in the log file.
+- The suggestion doens't appear in the buffer.
+- There is no error message.
+
+Analyze the code and tell me what should I do to make the suggestion appear in the buffer.
+If some debug is needed, tell me where to put the log instructions.
