N-th fix of cursor position

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -29,6 +29,7 @@ If I continue to type after the suggestion is displayed, the suggestion must dis
 As far as I type, I can trigger the suggestion again and if I continue to type, the suggestion must disappear, again and again.
 
 With the existing code:
+- The cursor is placed at the end of the line.
 - I see "Generated suggestion: ..." in the log file.
 - The suggestion doens't appear in the buffer.
 - There is no error message.
