--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -28,11 +28,15 @@ The suggestion text must push down the lines below it and not overlap with the t
 If I continue to type after the suggestion is displayed, the suggestion must disappear.
 As far as I type, I can trigger the suggestion again and if I continue to type, the suggestion must disappear, again and again.
 
-With the existing code:
+With the existing code, after I type `<M-PageDown>`:
+- The initial cursor position is reported in the log file.
 - The cursor is placed at the end of the line.
+- The new cursor position is reported in the log file: but it is the same as the initial cursor position.
 - I see "Generated suggestion: ..." in the log file.
-- The suggestion doens't appear in the buffer.
+- The suggestion doens't appear in the buffer: this is the problem to solve.
 - There is no error message.
+
+It is suspicious that the cursor position is reported to be the same as the initial cursor position, because I see the cursor position change in the buffer after I type `<M-PageDown>`
 
 Analyze the code and tell me what should I do to make the suggestion appear in the buffer.
 If some debug is needed, tell me where to put the log instructions.
