--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -19,6 +19,16 @@ This is done.
 When I am in a buffer and in INSERT mode and issue the key sequence `<M-PageDown>`,
 I want the plugin to place de cursor at the end of the line and then suggest with a random sentence (which is multi line) picked from the list of sentences.
 
+With the existing code, after I type `<M-PageDown>`:
+
+
+```
+E5108: Error executing lua: ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:32: Expected 3 arguments                                                 
+stack traceback:
+        [C]: in function 'nvim_feedkeys'
+        ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:32: in function <....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:21>    
+```
+
 It is important to place the cursor at the end of the line before suggesting because suggestion is based on an existing text.
 
 The suggestion text must appears in grey (#808080).
@@ -28,7 +38,9 @@ The suggestion text must push down the lines below it and not overlap with the t
 If I continue to type after the suggestion is displayed, the suggestion must disappear.
 As far as I type, I can trigger the suggestion again and if I continue to type, the suggestion must disappear, again and again.
 
-With the existing code, after I type `<M-PageDown>`:
+
+Analyze the code and tell me what should I do to solve the issue.
+
 - The initial cursor position is reported in the log file.
 - The cursor is placed at the end of the line.
 - The new cursor position is reported in the log file: but it is the same as the initial cursor position.
