--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -19,15 +19,20 @@ This is done.
 When I am in a buffer and in INSERT mode and issue the key sequence `<M-PageDown>`,
 I want the plugin to place de cursor at the end of the line and then suggest with a random sentence (which is multi line) picked from the list of sentences.
 
+I coded some lines in order to achieve that, but I was using `vim.api.nvim_feedkeys()` asynchronously (the last argument `true`). This means the function returns *before* the keys are actually processed and the cursor moves.  Therefore, I was capturing the initial cursor position twice.
+
+I changed the code to use `vim.api.nvim_feedkeys()` synchronously (the last argument `false`).
+
 With the existing code, after I type `<M-PageDown>`:
 
-
 ```
-E5108: Error executing lua: ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:32: Expected 3 arguments                                                 
+E5108: Error executing lua: ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:28: Expected 3 arguments                                                 
 stack traceback:
         [C]: in function 'nvim_feedkeys'
-        ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:32: in function <....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:21>    
+        ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:28: in function <....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:21>    
 ```
+
+Analyze the code and tell me how to provide the correct arguments to `nvim_feedkeys` 
 
 It is important to place the cursor at the end of the line before suggesting because suggestion is based on an existing text.
 
@@ -39,7 +44,6 @@ If I continue to type after the suggestion is displayed, the suggestion must dis
 As far as I type, I can trigger the suggestion again and if I continue to type, the suggestion must disappear, again and again.
 
 
-Analyze the code and tell me what should I do to solve the issue.
 
 - The initial cursor position is reported in the log file.
 - The cursor is placed at the end of the line.
