--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -18,41 +18,19 @@ This is done.
 
 When I am in a buffer and in INSERT mode and issue the key sequence `<M-PageDown>`,
 I want the plugin to place de cursor at the end of the line and then suggest with a random sentence (which is multi line) picked from the list of sentences.
-
-I coded some lines in order to achieve that, but I was using `vim.api.nvim_feedkeys()` asynchronously (the last argument `true`). This means the function returns *before* the keys are actually processed and the cursor moves.  Therefore, I was capturing the initial cursor position twice.
-
-I changed the code to use `vim.api.nvim_feedkeys()` synchronously (the last argument `false`).
-
-With the existing code, after I type `<M-PageDown>`:
-
-```
-E5108: Error executing lua: ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:28: Expected 3 arguments                                                 
-stack traceback:
-        [C]: in function 'nvim_feedkeys'
-        ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:28: in function <....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:21>    
-```
-
-Analyze the code and tell me how to provide the correct arguments to `nvim_feedkeys` 
-
 It is important to place the cursor at the end of the line before suggesting because suggestion is based on an existing text.
-
 The suggestion text must appears in grey (#808080).
-
 The suggestion text must push down the lines below it and not overlap with the text below.
 
 If I continue to type after the suggestion is displayed, the suggestion must disappear.
 As far as I type, I can trigger the suggestion again and if I continue to type, the suggestion must disappear, again and again.
 
-
-
-- The initial cursor position is reported in the log file.
+With the existing code, after I type `<M-PageDown>`:
 - The cursor is placed at the end of the line.
-- The new cursor position is reported in the log file: but it is the same as the initial cursor position.
-- I see "Generated suggestion: ..." in the log file.
+- The letter "a" appended to the end of the line.
+- I see "Entered generate_sentence()" in the log file.
 - The suggestion doens't appear in the buffer: this is the problem to solve.
 - There is no error message.
 
-It is suspicious that the cursor position is reported to be the same as the initial cursor position, because I see the cursor position change in the buffer after I type `<M-PageDown>`
-
-Analyze the code and tell me what should I do to make the suggestion appear in the buffer.
+Analyze the code and tell me how to get the suggestion to appear in the buffer.
 If some debug is needed, tell me where to put the log instructions.
