--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -30,14 +30,7 @@ I wrote `./plugin/init.lua` to achieve the desired functionality.
 But when I type `<M-PageDown>`, the error message appears:
 
 ```
-E5108: Error executing lua [string ":lua"]:1: module 'plugin.init' not found:
-        no field package.preload['plugin.init']
-cache_loader: module plugin.init not found
-cache_loader_lib: module plugin.init not found
-        no file './plugin/init.lua'
-stack traceback:
-        [C]: in function 'require'
-        [string ":lua"]:1: in main chunk
+Attempt to call global 'suggest_random_sentence' (a nil value)
 ```
 
 Analyze the code and tell me what should I do to fix the issue.
