--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -27,8 +27,7 @@ As far as I type, I can trigger the suggestion again and if I continue to type, 
 
 I wrote `./plugin/init.lua` to achieve the desired functionality.
 
-But when I type `<M-PageDown>`, the inline suggestion is not splat into multiple lines.
-I just see the entire sentence in one line and a `^@` in the place of the newline character.
+But when I type `<M-PageDown>`, the inline suggestion doen not appear in the buffer.
 
 Analyze the code and tell me what should I do to make the inline suggestion to display the sentence on multiple lines and push down the lines below.
 
