--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -27,7 +27,7 @@ As far as I type, I can trigger the suggestion again and if I continue to type, 
 
 I wrote `./plugin/init.lua` to achieve the desired functionality.
 
-But when I type `<M-PageDown>`, the inline suggestion doen not appear in the buffer.
+But when I type `<M-PageDown>`, the inline suggestion appears before the cursor is moved to the end of the line and is not multiline: it is just one line with a `^@` in the place of the newline character.
 
-Analyze the code and tell me what should I do to make the inline suggestion to display the sentence on multiple lines and push down the lines below.
+Analyze the code and tell me what should I do to make the cursor move to the end of the line and then display the inline suggestion on multiple lines and push down the lines below.
 
