implement accepting the suggestion

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -5,6 +5,7 @@ But we are not going to implement all in one go, we are to make it step by step.
 
 - Generate random sentences
 - Make an inline suggestion from a random sentence when triggered.
+- Have the possibility transform the inline suggestion into regular text (accepting the suggestion).
 - Query the DeepSeek API to get suggestions from the content of the buffer.
 - Use the DeepSeek API response to suggest completions (dont use the random sentences anymore)
 
@@ -17,17 +18,25 @@ This is done.
 ## Step 2: Make an inline  suggestion from a random sentence when triggered.
 
 When I am in a buffer and in INSERT mode and issue the key sequence `<M-PageDown>`,
-I want the plugin to place de cursor at the end of the line and then suggest with a random sentence (which is multi line) picked from the list of sentences.
-It is important to place the cursor at the end of the line before suggesting because suggestion is based on an existing text.
-The suggestion text must appears in grey (#808080).
-The suggestion text must push down the lines below it and not overlap with the text below.
+The plugin to place de cursor at the end of the line and then insert an inline suggestion 
+taken from a random sentence (which is multi line) picked from the list of sentences.
+The suggestion appears in grey (#808080).
+The suggestion pushes down the lines below it and does not overlap with the text below.
+If I continue to type after the suggestion is displayed, the suggestion disappears.
+As far as I type, I can trigger the suggestion again and if I continue to type, the suggestion disappears, again and again.
 
-If I continue to type after the suggestion is displayed, the suggestion must disappear.
-As far as I type, I can trigger the suggestion again and if I continue to type, the suggestion must disappear, again and again.
+That is the desired behavior.
 
-I wrote `./plugin/init.lua` to achieve the desired functionality.
+## Step 3: Have the possibility transform the inline suggestion into regular text (accepting the suggestion).
 
-But when I type `<M-PageDown>`, the inline suggestion appears as just one line with a `^@` in the place of the newline character.
+When I am in a buffer and in INSERT mode and issue the key sequence `<M-PageDown>`,
+The plugin to place de cursor at the end of the line and then insert an inline suggestion 
+taken from a random sentence (which is multi line) picked from the list of sentences.
+The suggestion appears in grey (#808080).
+The suggestion pushes down the lines below it and does not overlap with the text below.
 
-Analyze the code and tell me what should I do to make the inline suggestion display on multiple lines and push down the lines below.
+I want to transform the inline suggestion into regular text because I like that suggested sentence.
+I want that if I issue the `<M-PageUp>` key sequence, the suggestion is transformed into regular text.
+
+Analyze the code and tell me what should I do to make the inline suggestion to be transformed into regular text with the `<M-PageUp>` key sequence.
 
