fix error when accepting sugestion

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -29,14 +29,20 @@ That is the desired behavior.
 
 ## Step 3: Have the possibility transform the inline suggestion into regular text (accepting the suggestion).
 
-When I am in a buffer and in INSERT mode and issue the key sequence `<M-PageDown>`,
-The plugin to place de cursor at the end of the line and then insert an inline suggestion 
-taken from a random sentence (which is multi line) picked from the list of sentences.
-The suggestion appears in grey (#808080).
-The suggestion pushes down the lines below it and does not overlap with the text below.
-
 I want to transform the inline suggestion into regular text because I like that suggested sentence.
-I want that if I issue the `<M-PageUp>` key sequence, the suggestion is transformed into regular text.
 
-Analyze the code and tell me what should I do to make the inline suggestion to be transformed into regular text with the `<M-PageUp>` key sequence.
+With the current `./plugin/init.lua` file,
+I issue the `<M-PageUp>` key sequence, the suggestion is transformed into regular text.
+
+But before the suggestion is transformed into regular text, I get the following error:
+
+```
+E5108: Error executing lua ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:74: attempt to get length of field 'current_suggestion' (a nil value)
+stack traceback:
+....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:74: in function 'accept_suggestion'
+[string ":lua"]:1: in main chunk
+```
+
+
+Analyze the code and tell me what makes the error appear but the suggestion is transformed into regular text anyway.
 
