get the text before and after the cursor

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,11 +1,12 @@
-# Propose inline suggestions from the random sentence generator
+# Propose inline suggestions from DeepSeek API
 
-The final goal of this project is to be an inline suggestion plugin that uses the DeepSeek API to suggest.
-But we are not going to implement all in one go, we are to make it step by step.
+The final purpose of this project is to be an inline suggestion plugin that uses the DeepSeek API to suggest.
+But we are not going to implement everything in one step, we are to make it step by step.
 
 - Generate random sentences
 - Make an inline suggestion from a random sentence when triggered.
 - Have the possibility transform the inline suggestion into regular text (accepting the suggestion).
+- Get the content of the current buffer know how to split it into 2 parts: the first part is the text before the cursor, and the second part is the text after the cursor (log the 2 parts into the logs)
 - Query the DeepSeek API to get suggestions from the content of the buffer.
 - Use the DeepSeek API response to suggest completions (dont use the random sentences anymore)
 
@@ -29,19 +30,23 @@ That is the desired behavior.
 
 ## Step 3: Have the possibility transform the inline suggestion into regular text (accepting the suggestion).
 
-I want to transform the inline suggestion into regular text because I like that suggested sentence.
+Now the current code allows to transform the inline suggestion into regular text with the `<M-PageUp>` key sequence.
 
-With the current `./plugin/init.lua` file,
-I issue the `<M-PageUp>` key sequence, the suggestion is transformed into regular text.
+## Step 4: Get the text before and after the cursor then log it into the logs
 
-But before the suggestion is transformed into regular text, I get the following error:
+Logging is achieved with the following code:
 
 ```
-E5108: Error executing lua ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:74: attempt to get length of field 'current_suggestion' (a nil value)
-stack traceback:
-....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:74: in function 'accept_suggestion'
-[string ":lua"]:1: in main chunk
+local rktmb_deepseek_complete = require("rktmb-deepseek-complete")
+rktmb-deepseek-complete.log("The text to log")
 ```
 
-Analyze the code and tell me what makes the error appear but the suggestion is transformed into regular text anyway.
+When in INSERT mode and issue the `<M-PageDown>` key sequence, I want to add the feature to:
+- get the text before the cursor and store it in a variable
+- get the text after the cursor and store it in a variable
+- log the 2 variables into the logs
+
+The features that already work must continue to work.
+
+Tell me the modifications I need to make to the code in order to achieve what I want.
 
