log all but not only one ligne

--- a/.ai-history/2025-01-06_18h-02m-15s_gemini_1736175735.md
+++ b/.ai-history/2025-01-06_18h-02m-15s_gemini_1736175735.md
@@ -53,3 +53,77 @@ The features that already work must continue to work.
 
 Tell me the modifications I need to make to the code in order to achieve what I want.
 
+
+
+
+# This is gemini-exp-1206 answer (2k in, 0k out)
+
+```lua
+-- lua/rktmb-deepseek-complete.lua
+local M = {}
+
+function M.log(message)
+  local log_file = io.open("/tmp/rktmb-deepseek-complete.log", "a")
+  if log_file == nil then
+    print("Error opening log file")
+    return
+  end
+  log_file:write(message .. "\n")
+  log_file:close()
+end
+
+function M.generate_sentence()
+  M.log("Entered generate_sentence()")
+  local sentences = { -- ... (unchanged)
+  }
+  return sentences[math.random(#sentences)]
+end
+
+return M
+```
+
+```lua
+-- plugin/init.lua
+local rktmb_deepseek_complete = require("rktmb-deepseek-complete")
+
+_G.ns_id = vim.api.nvim_create_namespace('rktmb-deepseek-complete')
+
+-- ... (other global variables)
+
+_G.suggest_random_sentence = function()
+  local current_row, current_col = unpack(vim.api.nvim_win_get_cursor(0))
+
+  -- Get buffer content before and after cursor
+  local current_buffer = vim.api.nvim_get_current_buf()
+  local lines = vim.api.nvim_buf_get_lines(current_buffer, 0, -1, false)
+  local text_before_cursor = table.concat(lines, "\n", 1, current_row - 1) .. string.sub(lines[current_row], 1, current_col)
+  local text_after_cursor = string.sub(lines[current_row], current_col + 1) .. "\n" .. table.concat(lines, "\n", current_row + 1)
+
+
+  rktmb_deepseek_complete.log("Text before cursor:\n" .. text_before_cursor)
+  rktmb_deepseek_complete.log("Text after cursor:\n" .. text_after_cursor)
+
+
+  -- Ensure the cursor is at the end of the current line
+  local current_line = vim.api.nvim_get_current_line()
+  vim.api.nvim_win_set_cursor(0, {current_row, #current_line})
+
+  -- ... (rest of the function remains unchanged)
+end
+
+_G.accept_suggestion = function()
+  -- ... (unchanged)
+end
+
+-- ... (autocommands and keymaps remain unchanged)
+```
+
+Key changes:
+
+- **Getting cursor position:**  Now uses `local current_row, current_col = unpack(vim.api.nvim_win_get_cursor(0))` to get both row and column.
+- **Getting buffer content:** Uses `vim.api.nvim_buf_get_lines` to get all lines, then concatenates them appropriately using `table.concat` and `string.sub` to extract the text before and after the cursor.
+- **Logging:**  Logs the `text_before_cursor` and `text_after_cursor` using the provided `rktmb_deepseek_complete.log` function.
+
+
+This revised code addresses Step 4 by capturing and logging the text before and after the cursor while preserving the existing functionality from Steps 1-3.  Remember to test thoroughly!  Let me know if you have any other questions.
+
